Working with Java 16
Significantly faster loads. ~2x faster to import NIOSH data.